--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-    <a href="/" class="header__logo">Admin Panel🏡</a>
+    <a href="/" class="header__logo">Dev Blog🏡</a>
   
     <nav class="header__nav">
       <ul>
